# EngCapTrainComp_2020

./: CMakeLists.txt  DataSetGenerator.cpp  DataSetGenerator.h  FlowController.cpp  FlowController.h  README.md  main.cpp
binder/: AuvManager.cpp  AuvManager.h  CSerialPort.cpp  CSerialPort.h  LinuxSerial.cpp
ipc/: ClassificationManager.cpp  ClassificationManager.h
ipc/cpp_sockets/include/: client.hpp
ipc/cpp_sockets/src/: client.cpp
test/: TestClassUtil.cpp  TestClassUtil.h
ui/: VgaFont.cpp  Widgets.cpp  Widgets.h
util/: PidF.cpp  PidF.h  common.cpp  common.h
